# logc

./: .gitignore  BUILD.bazel  Makefile.am  README  README.md  bootstrap  configure.ac  liblogc_test.c  logc.c  logc.h
example/: Makefile.am  example.c
test/: Makefile.am
