#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([FULL-PACKAGE-NAME], [VERSION], [BUG-REPORT-ADDRESS])
AM_INIT_AUTOMAKE #1
AC_CONFIG_SRCDIR([logc.c])
AC_CONFIG_HEADERS([config.h])

AC_PROG_LIBTOOL

AC_PROG_LIBTOOL

# Checks for programs.
AC_PROG_CC

# Checks for libraries.
#AC_CHECK_LIB([])

# Checks for header files.


# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT(Makefile)
